syntax = "proto3";

package pb;

import "payloads/address_payload.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message WarehouseCreateRequest {
  int32 company = 1;
  AddressCreate address = 2;
  string name = 3;
  optional string code = 4;
}

message WarehouseCreateResponse {
  int32 code = 1;
  string message = 2;
  int32 details = 3;
}