syntax = "proto3";

package pb;

import "entities/warehouse.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message WarehouseListRequest {
  int32 company = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "company"
    ],
  }];
  optional string search = 2;
  optional int32 page = 3;
  optional int32 limit = 4;
}

message WarehouseListResponse {
  int32 code = 1;
  string message = 2;
  repeated Warehouse details = 3;
}